--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,57 @@
 body {
-    background-color: rgb(200,200,200);
-    color: rgb(0,0,0);
-    font-family: "Open Sans", sans-serif;
-    text-align: left;
-		font-size: 400%;
-
+  background-color: rgb(200, 200, 200);
+  color: rgb(0, 0, 0);
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  font-size: 400%;
+  margin: 0;
 }
 
 #content {
-    display: block;
-    margin-left: auto;
-    margin-right: auto
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
-	
+}
+
+.title {
+  font-size: 30px;
+  margin-top: 10px;
+  color: white;
+  text-align: left;
+}
+
+h2 {
+  font-size: 40px;
+  text-align: left;
+}
+
+p {
+  font-size: 20px;
+  text-align: left;
 }
 
 footer {
-	font-style: italic;
+  font-style: italic;
+}
+
+nav {
+  display: flex;
+  gap: 50px;
+  margin-top: 10px;
+  padding: 5px;
+  background-color: rgb(96, 5, 121);
+}
+nav a {
+  color: white;
+  font-size: 30px;
+  padding: 10px 15px; /* box inside spacing */
+  background-color: rgb(139, 53, 197); /* box color */
+  border-radius: 10px; /* rounded corners */
+  transition: background 0.3s;
+}
+nav a:hover {
+  background-color: rgb(59, 3, 96);
 }
