--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,8 @@ body {
   text-align: left;
   font-size: 400%;
   margin: 0;
-transform: scale(1);
-transform-origin: top left;
-
+  transform: scale(1);
+  transform-origin: top left;
 }
 
 #content {
@@ -19,7 +18,7 @@ transform-origin: top left;
 /* header {
 } */
 option {
-  size;
+  size: 0cap;
 }
 .collegeDropdown {
   padding-left: 10px;
@@ -59,10 +58,10 @@ p {
   font-size: 20px;
   padding-left: 10px;
 }
-
+/*
 br {
   
-}
+}*/
 
 footer {
   font-style: italic;
@@ -79,6 +78,7 @@ nav {
   background-color: rgb(96, 5, 121);
 }
 nav a {
+  align-items: end;
   padding-left: 10px;
   color: white;
   font-size: 30px;
